Nettoyage : suppression du Vault Root Token du README

--- a/src/POC.ShowEnvironmentVariables/POC.ShowEnvironmentVariables/Properties/launchSettings.json
+++ b/src/POC.ShowEnvironmentVariables/POC.ShowEnvironmentVariables/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "POC.ShowEnvironmentVariables": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "var01 var02"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker"
